<resources>
    <string name="app_name">FizzBuzz</string>
    <string name="invalid_inputs">Invalid input value for limit</string>
    <string name="processing_label">Processing..</string>
    <string name="result_hint">Result</string>
    <string name="process_hint">Process</string>
    <string name="cancel_process_hint">Cancel</string>
    <string name="the_most_frequent_request_statistics_label">The most frequent request</string>
    <string name="completed_request_label">Completed request: %s</string>
    <string name="number_of_hits_label">Number of hits: %s</string>
    <string name="integer_one_label">Integer One: %s</string>
    <string name="integer_two_label">Integer Two: %s</string>
    <string name="limit_label">Limit: %s</string>
    <string name="string_one_label">String One: %s</string>
    <string name="string_two_label">String Two: %s</string>
    <string name="stats_label">Stats</string>
    <string name="label_integer_one">3</string>
    <string name="integer_two_hnit">5</string>
    <string name="limit_hint">10000</string>
    <string name="fizz_hint">fizz</string>
    <string name="buzz_hint">buzz</string>
</resources>